--- a/style.css
+++ b/style.css
@@ -1,100 +1,57 @@
 * {
-    margin: auto;
-    max-width: 1000px;
-    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #width {
-    width: 1000px;
-    height: 1500px;
-    background: #C0C0C0;
+    margin-top: 100px;
+    padding: 20px;
 }
 
 #hero-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 500px;
-}
-
-#title {
-    width: 475px;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    background-color: #4682B4;
-    color: white;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    padding-left: 25px;
-}
-
-#checked-container {
-    width: 500px;
-    height: auto;
-    background-color: #ffffff;
-    height: 800px;
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 20px;
 }
 
 #header {
-    position: relative;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-#input {
+#control {
+    margin-top: 20px;
     display: flex;
-    width: 400px;
-    height: 50px;
-    border-radius: 50px;
-    border: 1px solid #E5E4E2;
-    justify-content: center;
-    align-items: end;
-    margin-top: 700px;
+    flex-direction: row;
+    gap: 5px;
 }
 
-.check-button {
-    position: absolute;
-    background: #b0b8ba;
-    width: 70px;
-    height: 35px;
-    margin-top: 72px;
-    margin-left: 410px;
-    border-radius: 25px;
-    border: none;
-}
-
-.check-button span {
-    color: #ffffff;
-    font-weight: 800;
-}
-
-input::placeholder {
-    font-weight: 800;
-    font-size: 20px;
-    color: #A9A9A9;
-    padding-left: 20px;
+#title {
+    font-size: 25px;
 }
 
 #value {
-  display: flex;
-  flex-direction: column;
-  left: auto;
-  font-weight: 900;
-  font-size: large;
-  gap: 20px;
+    margin-top: 10px;
 }
 
-#button {
-    color: white;
-    background-color: #4682B4;
-    text-align: center;
-    width: 150px;
-    height: 50px;
-    border-radius: 25px;
-    font-size: 15px;
-    font-weight: 900;
-    border: none;
-    margin-left: 180px;
+.task-item {
     margin-top: 20px;
+    padding: 10px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+    box-shadow: inset 1px 1px 2px hsl(0, 0%, 25%);
 }
+
+
