--- a/style.css
+++ b/style.css
@@ -1,78 +1,78 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: Arial, sans-serif; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  font-family: Arial, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #width {
-    margin-top: 100px;
-    padding: 20px;
+  margin-top: 100px;
+  padding: 20px;
+  width: 1800px;
 }
 
 #hero-section {
-    background-color: #fff;
-    border-radius: 8px;
-    padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 20px;
 }
 
 #header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #control {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
 }
 
 #title {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 #value {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .task-item {
-    margin-top: 20px;
-    padding: 10px;
-    margin-bottom: 5px;
-    border-radius: 5px;
-    font-size: 16px;
-    font-weight: 500;
-    color: 	hsl(0, 0%, 71%);
-    box-shadow: inset 1px 1px 2px hsl(0, 0%, 25%);
+  margin-top: 20px;
+  padding: 10px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 500;
+  color: hsl(0, 0%, 71%);
+  box-shadow: inset 1px 1px 2px hsl(0, 0%, 25%);
 }
 
 .edit-button {
-    position: fixed;
-    margin-left: 245px;
-    padding: 5px;
-    border-radius: 5px;
-    font-size: 10px;
-    font-weight: 500;
-    color: hsl(0, 0%, 48%);
-    box-shadow: inset 1px 1px 2px hsl(0, 0%, 25%);
+  position: fixed;
+  margin-left: 245px;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 10px;
+  font-weight: 500;
+  color: hsl(0, 0%, 48%);
+  box-shadow: inset 1px 1px 2px hsl(0, 0%, 25%);
 }
 
 .delete-button {
-    position: fixed;
-    margin-left: 195px;
-    padding: 5px;
-    border-radius: 5px;
-    font-size: 10px;
-    font-weight: 500;
-    color: hsl(0, 0%, 48%);
-    box-shadow: inset 1px 1px 2px hsl(0, 0%, 25%);
+  position: fixed;
+  margin-left: 195px;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 10px;
+  font-weight: 500;
+  color: hsl(0, 0%, 48%);
+  box-shadow: inset 1px 1px 2px hsl(0, 0%, 25%);
 }
-
