--- a/style.css
+++ b/style.css
@@ -36,6 +36,12 @@ body {
   gap: 5px;
 }
 
+@media screen and (max-width: 420px) {
+  #control {
+    flex-direction: column;
+  }
+}
+
 #title {
   font-size: 25px;
 }
